fix apps modal on mobile

--- a/application/src/main/webapp/css/chatMobile.less
+++ b/application/src/main/webapp/css/chatMobile.less
@@ -383,6 +383,23 @@
     }
   }
 
+  // add event modal 
+  .chat-app-event {
+    .chat-event-date .event-item {
+      margin-bottom: 10px;
+      input, .selectbox {
+        width: 100%;
+      }
+      .selectbox {
+        margin: 0 0 10px 0;
+      }
+    }
+  }
+
+  .apps-composer-modal {
+    min-width: 90%;
+  }
+
   // modal
   .modal-mask .chat-modal {
     transform: none;
